--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,8 @@
 
 /* NAVABAR */
 #mainNav { border-bottom: 3px solid #BB2D3B; }
+
+/* MAIN */
+main{ -webkit-box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
+      -moz-box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
+       box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1);       }
