add filtred search

--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,8 @@
 /* MAIN */
 main{ -webkit-box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
       -moz-box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
-       box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1);       }
+       box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
+      min-height: calc(100vh - 100px);}
+header {
+      min-height: 100px;
+}
