fixed some issues

--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,16 @@
 * { padding: 0; margin: 0; box-sizing: border-box; }
 
 /* NAVABAR */
-#mainNav { border-bottom: 3px solid #BB2D3B; }
+#navMain { border-bottom: 3px solid #BB2D3B; }
 
 /* MAIN */
-main{ -webkit-box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
+main { -webkit-box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
       -moz-box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
        box-shadow: inset 0px 0px 66px 0px rgba(0,0,0,1); 
       min-height: calc(100vh - 100px);}
-header {
-      min-height: 100px;
-}
+
+/* HEADER */ 
+header { height: 100px; }
+
+/* EXTRA */
+.noContent  { min-height: calc(100vh - 100px); }
