--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,34 @@ header { height: 100px; }
 #flag{
       width: 30px;
 }
+.content{
+      display: none !important;
+} 
+#card:hover .content{
+      display: block !important; 
+      background-color: rgba(0, 0, 0, 0.8); 
+      opacity: 1; 
+      transform: translate(1.2);
+      transition: opacity 0.5s ease, background-color 0.5s ease, transform 0.5s;
+
+}
+#navMain li:hover {
+      background-color: #BB2D3B;
+      border-radius: 50% 20%;
+}
+#card img{
+      
+      -webkit-box-shadow: 0px 11px 21px 0px rgba(0,0,0,1) !important;
+-moz-box-shadow: 0px 11px 21px 0px rgba(0,0,0,1) !important;
+box-shadow: 0px 11px 21px 0px rgba(0,0,0,1) !important;
+}
+.overlay:hover{
+   transform: scale(1.2);
+   transition: transform 1s;
+   z-index: 1000;
+}
+#card{
+      background-color: #2bff0000;
+      border: 0;
+      border-radius: 50%;
+}
