--- a/src/App.css
+++ b/src/App.css
@@ -60,9 +60,17 @@ header {
 .jumbo {
   width: 100%;
   height: 450px;
-  background-color: #bb2d3b;
 }
 .jumbo img {
-  height: 100%;
+  background-color: rgba(0, 0, 0, 0.534);
+  opacity: 0.5;
+  object-fit: cover;
   width: 100%;
+  height: 100%;
+}
+.contenitoreOverlay {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  position: absolute;
+  top: 100px;
+  left: 175px;
 }
