--- a/src/App.css
+++ b/src/App.css
@@ -4,14 +4,9 @@
   margin: 0;
   box-sizing: border-box;
 }
-/* NAVABAR */
-#navMain {
-}
 /* MAIN */
 main {
-  -webkit-box-shadow: inset 0px 0px 66px 0px rgba(0, 0, 0, 1);
-  -moz-box-shadow: inset 0px 0px 66px 0px rgba(0, 0, 0, 1);
-  box-shadow: inset 0px 0px 66px 0px rgba(0, 0, 0, 1);
+  box-shadow: inset 0 0 66px rgba(0, 0, 0, 1);
   min-height: calc(100vh - 100px);
 }
 /* HEADER */
@@ -26,6 +21,7 @@ header {
 #flag {
   width: 30px;
 }
+/* CARD CONTENT */
 .content {
   display: none !important;
 }
@@ -34,7 +30,7 @@ header {
   background-color: rgba(0, 0, 0, 0.8);
   opacity: 1;
   transform: translate(1.2);
-  transition: opacity 0.5s ease, background-color 0.5s ease, transform 0.5s;
+  transition: opacity 0.5s, background-color 0.5s, transform 0.5s;
 }
 #navMain li:hover {
   background-color: #bb2d3b;
@@ -42,9 +38,7 @@ header {
 }
 #card img {
   min-height: 100%;
-  -webkit-box-shadow: 0px 11px 21px 0px rgba(0, 0, 0, 1) !important;
-  -moz-box-shadow: 0px 11px 21px 0px rgba(0, 0, 0, 1) !important;
-  box-shadow: 0px 11px 21px 0px rgba(0, 0, 0, 1) !important;
+  box-shadow: 0 11px 21px rgba(0, 0, 0, 1) !important;
 }
 .overlay:hover {
   transform: scale(1.2);
@@ -53,7 +47,7 @@ header {
 }
 #card {
   height: 250px;
-  background-color: #2bff0000;
+  background-color: transparent;
   border: 0;
   border-radius: 50%;
 }
